style: fix gap in HeightStyleForm

--- a/src/processes/ideal_partner/HeightStyleForm/HeightStyleForm.module.css
+++ b/src/processes/ideal_partner/HeightStyleForm/HeightStyleForm.module.css
@@ -7,7 +7,7 @@
 
 .HeightInputWrapper {
   display: grid;
-  gap: 20px;
+  gap: 8px;
 }
 
 .HeightInput{
